syntax = "proto3";

package draft.v1;

import "google/protobuf/timestamp.proto";
import "draft/v1/draft.proto";

option go_package = "github.com/mcdev12/dynasty/go/internal/genproto/draft/v1;draftv1";

// RPC service for managing drafts in the fantasy platform.
service DraftService {
  // CRUD Operations
  rpc CreateDraft(CreateDraftRequest) returns (CreateDraftResponse);
  rpc GetDraft(GetDraftRequest) returns (GetDraftResponse);
  rpc UpdateDraft(UpdateDraftRequest) returns (UpdateDraftResponse);
  // TODO update draft settings eventually
  rpc StartDraft(StartDraftRequest) returns (StartDraftResponse);
  rpc PauseDraft(PauseDraftRequest) returns (PauseDraftResponse);
  rpc ResumeDraft(ResumeDraftRequest) returns (ResumeDraftResponse);
  rpc DeleteDraft(DeleteDraftRequest) returns (DeleteDraftResponse);

  // Picks
  rpc MakePick(MakePickRequest) returns (MakePickResponse);
}

// Requests and responses:

// CRUD Messages
message CreateDraftRequest {
  string league_id = 1;
  DraftType draft_type = 2;
  DraftSettings settings = 3;
  google.protobuf.Timestamp scheduled_at = 4;
}

message CreateDraftResponse {
  Draft draft = 1;
}

message GetDraftRequest {
  string draft_id = 1;
}

message GetDraftResponse {
  Draft draft = 1;
}

message ListDraftsForLeagueRequest {
  string league_id = 1;
}

message ListDraftsForLeagueResponse {
  repeated Draft drafts = 1;
}

// TODO remove status from here
message UpdateDraftRequest {
  string draft_id = 1;
  optional DraftSettings settings = 2;
  optional google.protobuf.Timestamp scheduled_at = 4;
}

message UpdateDraftResponse {
  Draft draft = 1;
}

message StartDraftRequest {
  string draft_id = 1;
}

message StartDraftResponse {
  string draft_id = 1;
}

message PauseDraftRequest {
  string draft_id = 1;
}

message PauseDraftResponse {
  string draft_id = 1;
}

message ResumeDraftRequest {
  string draft_id = 1;
}

message ResumeDraftResponse {

}

message DeleteDraftRequest {
  string draft_id = 1;
}

message DeleteDraftResponse {}


message MakePickRequest {
  string pick_id = 1;
  string draft_id = 2;
  string team_id = 3;
  string player_id = 4;
  int32 overall_pick = 5;
}

message MakePickResponse {
}

